Fixed overflow issue with craters, added bevel shadow effect

--- a/src/styles/dayStyles/Day09.css
+++ b/src/styles/dayStyles/Day09.css
@@ -32,6 +32,7 @@
     background-color: #F6EDBD;
     box-shadow: 0 0 10px 0 #F6EDBD;
     animation: rise 1s ease-out;
+    overflow: hidden;
 }
 .crater {
     position: absolute;
@@ -39,6 +40,7 @@
     border-radius: 50%;
     opacity: 0.3;
     transform: translate(-50%, -50%);
+    box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.3);
 }
 
 /* bottom 1/4 w/ weather stats */
